# Worms2LobbyServerCpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  cmake-multi-platform.yml  cmake-single-platform.yml
include/: database.hpp  framed_deserialization_result.hpp  framed_packet_reader.hpp  game.hpp  nation.hpp  packet_buffers.hpp  packet_code.hpp  packet_flags.hpp  packet_handler.hpp  room.hpp  server.hpp  session_info.hpp  string_utils.hpp  user.hpp  user_session.hpp  version.hpp.in  windows_1251.hpp  windows_1252.hpp  worms_packet.hpp
include/header_only/: concurrent_queue.hpp  concurrentqueue.hpp  framed_deserialization_result.hpp  framed_packet_reader.hpp  packet_buffers.hpp  resettable_timeout.hpp  utilities.hpp
src/: database.cpp  game.cpp  packet_handler.cpp  room.cpp  server.cpp  session_info.cpp  user.cpp  user_session.cpp  worms_packet.cpp
